--- a/views/eslog.ejs
+++ b/views/eslog.ejs
@@ -173,7 +173,7 @@
 			<NazivNaslovPodjetja>
 				<VrstaPartnerja>BY</VrstaPartnerja>
 				<NazivPartnerja>
-					<NazivPartnerja1><%= stranka[0].FirstName + " " + stranka[0].LastName %></NazivPartnerja1>
+					<NazivPartnerja1><%= stranka[0].FirstName + " " + stranka[0].LastName + " " %></NazivPartnerja1>
 					<NazivPartnerja2><%= stranka[0].Company %></NazivPartnerja2>
 					<NazivPartnerja3></NazivPartnerja3>
 					<NazivPartnerja4></NazivPartnerja4>
